Sneha Bagri |MOBN-951| Fix z-index for calendar picker date picker

--- a/ui/react-components/components/CalendarPicker/CalendarPicker.module.scss
+++ b/ui/react-components/components/CalendarPicker/CalendarPicker.module.scss
@@ -6,5 +6,9 @@
   margin-left: 0.4em;
   .calenderPickerDatePickerWrapper{
     z-index:10000;
+    div{
+      z-index: 100000;
+    }
   }
+
 }
